--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,52 @@
 
+# Created by https://www.toptal.com/developers/gitignore/api/kicad,freecad
+# Edit at https://www.toptal.com/developers/gitignore?templates=kicad,freecad
+
+### FreeCad ###
+*.pyc
+*.fcstd1
 *.FCStd1
-*.FCStd1
-MCAD/table_2024.FCStd1
-MCAD/robots_2024.FCStd1
-MCAD/robot_holonome.FCStd1
-MCAD/mechanical-parts/colonne-moteur.FCStd1
-MCAD/electronical-parts/deplacement-sensor.FCStd1
-MCAD/electronical-parts/beacon_assembled.FCStd1
+*.fcstd2
+*.FCStd2
+
+### KiCad ###
+# For PCBs designed using KiCad: https://www.kicad.org/
+# Format documentation: https://kicad.org/help/file-formats/
+
+# Temporary files
+*.000
+*.bak
+*.bck
+*.kicad_pcb-bak
+*.kicad_sch-bak
+*-backups
+*.kicad_prl
+*.sch-bak
+*~
+_autosave-*
+*.tmp
+*-save.pro
+*-save.kicad_pcb
+fp-info-cache
+
+# Netlist files (exported from Eeschema)
+*.net
+
+# Autorouter files (exported from Pcbnew)
+*.dsn
+*.ses
+
+# Exported BOM files
+*.xml
+*.csv
+
+### KiCad Patch ###
+rescue-backup/
+
+*.tsv
+bom/
+
+# Gerber export output
+out/
+
+# End of https://www.toptal.com/developers/gitignore/api/kicad,freecad
